--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,6 @@
 body {
   margin: 0;
-  font-family: "Vazir", "tahoma", 'Ubuntu', "sans-serif" !important;
+  font-family: "Vazir", "tahoma", "Ubuntu", "sans-serif" !important;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
@@ -9,3 +9,23 @@ body {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 } */
+
+input[type="text"]::-webkit-input-placeholder,
+input[type="email"]::-webkit-input-placeholder,
+input[type="number"]::-webkit-input-placeholder {
+  color:#BD93F9 !important;
+}
+
+input[type="text"]:focus {
+  outline: none !important;
+  box-shadow: none !important;
+}
+input[type="email"]:focus {
+  outline: none !important;
+  box-shadow: none !important;
+}
+input[type="number"]:focus {
+  outline: none !important;
+  box-shadow: none !important;
+}
+
